Centering greeting on home page.

--- a/index.html
+++ b/index.html
@@ -39,18 +39,14 @@
 
 
 
-  <content style="margin-top:10px">
-    <div class="container" style="margin-left: 15px;">
-      <div id="about-me" class="row section-border">  
-        <div class="col-md-12" >
+  <content>
+    <div class="container" id="home-text">
+        <div class="col-md-12">
             <h1>I'm Jonathan.  I develop full-stack web applications.</h1>
         </div>
       </div>
-    </div>
+    
   </content>
-
-
-
 
 
 </body>
