Adding styling to buttons on work carousel.

--- a/work.html
+++ b/work.html
@@ -42,6 +42,12 @@
 
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
+
+              <!-- provides period of no image between slides to avoid cross-fade of different apps -->
+              <div class="carousel-item" data-bs-interval="100">
+                <img  class="d-block w-100" >
+              </div>
+
               <div class="carousel-item active" data-bs-interval="200">
                 <img src="assets\work-images\Birthday-Clock-2000x900.png" class="d-block w-100" alt="Tick Tock Birthday Clock image">
               </div>
@@ -56,10 +62,8 @@
                       Tick Tock Birthday Clock is built with JavaSCript.  It uses mysql, bcrypt, dotenv, express, handlebars, bootstrap, session and sequelize.  It's deployed on Heroku. 
                      </h3>
                     <h3>
-                      <a class="link-text button" href="https://github.com/Xr7TSi/Tick-Tock-Birthday-Clock">Visit the TickTock Birthday Clock Github Repository</a>
-                    </h3>
-                    <h3>
-                      <a class="link-text button" href="https://tick-tock-birthday-clock.herokuapp.com/">See TickTock Birthday Clock deployed on Heroku</a>
+                      <a href="https://github.com/Xr7TSi/Tick-Tock-Birthday-Clock" class="btn btn-primary"><h5>See the repo</h5></a>
+                      <a href="https://tick-tock-birthday-clock.herokuapp.com/" class="btn btn-primary"><h5>See it deployed</h5></a>
                     </h3>
                   </div>
                 </div>
@@ -84,12 +88,10 @@
                     <h3>
                       News Flash is built with JavaSCript.  It uses APIs, bootstrap and local storage.   
                      </h3>
-                    <h3>
-                      <a class="button" href="https://github.com/Xr7TSi/News-Flash">Visit the News Flash Github Repository</a>
-                    </h3>
-                    <h3>
-                      <a class="button" href="https://xr7tsi.github.io/News-Flash/">See News Flash deployed on Github</a>
-                    </h3>
+                      <h3>
+                        <a href="https://github.com/Xr7TSi/News-Flash" class="btn btn-primary"><h5>See the repo</h5></a>
+                        <a href="https://xr7tsi.github.io/News-Flash/" class="btn btn-primary"><h5>See it deployed</h5></a>
+                      </h3>
                   </div>
                 </div>
               </div>
@@ -113,19 +115,14 @@
                       Weather Dashboard is built with JavaSCript.  It uses APIs, bootstrap and local storage.  
                      </h3>
                     <h3>
-                      <a class="button" href="https://github.com/Xr7TSi/Weather-Dashboard">Visit the Weather Dashboard Github Repository</a>
-                    </h3>
-                    <h3>
-                      <a class="button" href="https://xr7tsi.github.io/Weather-Dashboard/">See Weather Dashboard deployed on Github</a>
+                      <a href="https://github.com/Xr7TSi/Weather-Dashboard" class="btn btn-primary"><h5>See the repo</h5></a>
+                      <a href="https://xr7tsi.github.io/Weather-Dashboard/" class="btn btn-primary"><h5>See it deployed</h5></a>
                     </h3>
                   </div>
                 </div>
               </div>
 
-                <!-- provides period of no image between slides to avoid cross-fade of different apps -->
-              <div class="carousel-item" data-bs-interval="100">
-              <img  class="d-block w-100" >
-              </div>
+            
 
               <div class="carousel-item" data-bs-interval="200">
                 <img src="assets\work-images\Work-Day-Scheduler-2000x900.png" class="d-block w-100" alt="Workday Scheduler image">
@@ -139,12 +136,10 @@
                     </h3>
                     <h3>
                       Workday Scheduler is built with JavaScript.  It uses moment.js, bootstrap and local storage.  
-                     </h3>
-                    <h3>
-                      <a class="button" href="https://github.com/Xr7TSi/Workday-Scheduler">Workday Scheduler Github Repository</a>
                     </h3>
                     <h3>
-                      <a class="button" href="https://xr7tsi.github.io/Workday-Scheduler/">See Workday Scheduler deployed on Github</a>
+                      <a href="https://github.com/Xr7TSi/Workday-Scheduler" class="btn btn-primary"><h5>See the repo</h5></a>
+                      <a href="https://xr7tsi.github.io/Workday-Scheduler/" class="btn btn-primary"><h5>See it deployed</h5></a>
                     </h3>
                   </div>
                 </div>
