Updating text on carousel items.

--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
                      Tick Tock Birthday Clock gives the user a countdown to their birthday, a place to create and store their birthday wishlist and check out their friend's wishlists. 
                     </h3>
                     <h3>
-                      Tick Tock Birthday Clock is built with JavaSCript.  It uses mysql, bcrypt, dotenv, express, handlebars, bootstrap, session and sequelize.  It's deployed on Heroku. 
+                      It's built with JavaScript.  It uses mysql, bcrypt, dotenv, express, handlebars, bootstrap, session and sequelize.  It's deployed on Heroku. 
                      </h3>
                     <h3>
                       <a href="https://github.com/Xr7TSi/Tick-Tock-Birthday-Clock" class="btn btn-primary"><h5>See the repo</h5></a>
@@ -86,7 +86,7 @@
                      News Flash is a news aggregator that presents stories pulled from the web based on the user's news category preferences.   
                     </h3>
                     <h3>
-                      News Flash is built with JavaSCript.  It uses APIs, bootstrap and local storage.   
+                      It's built with JavaScript.  It uses APIs, bootstrap and local storage.   
                      </h3>
                       <h3>
                         <a href="https://github.com/Xr7TSi/News-Flash" class="btn btn-primary"><h5>See the repo</h5></a>
@@ -112,7 +112,7 @@
                      Weather Dashboard gives the user the current weather and a five day forecast for any city in the world.
                     </h3>
                     <h3>
-                      Weather Dashboard is built with JavaSCript.  It uses APIs, bootstrap and local storage.  
+                      It's built with JavaScript.  It uses APIs, bootstrap and local storage.  
                      </h3>
                     <h3>
                       <a href="https://github.com/Xr7TSi/Weather-Dashboard" class="btn btn-primary"><h5>See the repo</h5></a>
@@ -135,7 +135,7 @@
                      Workday Scheduler is a simple day planner.
                     </h3>
                     <h3>
-                      Workday Scheduler is built with JavaScript.  It uses moment.js, bootstrap and local storage.  
+                      It's built with JavaScript.  It uses moment.js, bootstrap and local storage.  
                     </h3>
                     <h3>
                       <a href="https://github.com/Xr7TSi/Workday-Scheduler" class="btn btn-primary"><h5>See the repo</h5></a>
