--- a/contact.html
+++ b/contact.html
@@ -13,28 +13,26 @@
   </head>
 
     <body>
-
-      <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: rgb(222, 222, 223)" >
-          <div class="container-fluid">
-            <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 28px; margin-left: 25px">Jonathan Rein</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="work.html">Work</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-        
-              </ul>
-            </div>
-          </div>
-        </nav>
-        </header>
+        <header class="sticky-top">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <div class="container-fluid">
+                <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 28px; margin-left: 25px" >Jonathan Rein</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link" href="work.html">Work</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+          </header>
 
         <div class="row">
         <div class="btn-group" >
