--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-  <body>
- 
+<body>
 
-  <header class="sticky-top">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: rgb(222, 222, 223)" >
+<header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 28px; margin-left: 25px" >Jonathan Rein</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,12 +29,12 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-  
         </ul>
+       
       </div>
     </div>
   </nav>
-  </header>
+</header>
 
 
 
@@ -48,6 +47,7 @@
     
   </content>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </body>
 
