--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="utf-8">
-  <title>Jonathan Rein Work</title>
+  <title>Jonathan Rein Contact</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,7 +14,7 @@
 
     <body>
         <header class="sticky-top">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light py-0">
               <div class="container-fluid">
                 <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 28px; margin-left: 25px" >Jonathan Rein</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
