--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
     <body>
      
       <header class="sticky-top">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light py-0">
           <div class="container-fluid">
             <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 28px; margin-left: 25px" >Jonathan Rein</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
